# calculator-fullstack

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: operations.py
backend/tests/: test_api.py  test_operations.py  test_schemas.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: Calculator.test.tsx  Calculator.tsx
frontend/src/services/: calculatorApi.test.ts  calculatorApi.ts
